...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Screenwide Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M4h-PL-LpO">
                                                    <rect key="frame" x="16" y="0.0" width="323.5" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Non Centered Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vUL-gY-4wA">
                                                    <rect key="frame" x="16" y="0.0" width="323.5" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="StackView Images" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Bnn-94-aPC">
                                                    <rect key="frame" x="16" y="0.0" width="323.5" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="InstaZoom" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9t7-rA-3LT">
                                                    <rect key="frame" x="16" y="0.0" width="323.5" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Trees_0" translatesAutoresizingMaskIntoConstraints="NO" id="EJh-LZ-FCd">
                                <rect key="frame" x="0.0" y="228" width="375" height="211"/>
                                <constraints>
...
                                </constraints>
                            </imageView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Trees_5" translatesAutoresizingMaskIntoConstraints="NO" id="XW1-rL-EMA">
                                <rect key="frame" x="20" y="361" width="300" height="225"/>
                                <constraints>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Colorfull_2" translatesAutoresizingMaskIntoConstraints="NO" id="eLC-3F-DVA">
                                <rect key="frame" x="0.0" y="208.5" width="375" height="250"/>
                                <constraints>
...
